Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8793

Failed to build subdirs project with "Qt4Builder.BuildSubDir" action

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.7.0
    • Qt Creator 2.6.1, Qt Creator 2.6.2
    • None
    • Windows, Linux
      Build configuration: separate build for "debug" and "release". Shadow-Build deactivated.

    Description

      When trying to build a subdirs project (TEMPLATE = subdirs in the *.pro file) with the command "Qt4Builder.BuildSubDir", QtCreator shows the error message "cannot find Makefile".
      QMake generates the file "Makefile" in the corresponding directory. When you build in Debug mode and you copy the existing file "Makefile" to "Makefile.Debug", everything works fine.

      When building the "master" subdirs project, everything works fine. The problem only occurs on subdirs projects included by the "master" project.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            yakin Sebastian Stadelmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes