Qt4Project: Fix building of subprojects for debug_and_release

Use the right makefile.

Task-number: QTCREATORBUG-8793

Change-Id: Ibd836602b465342ccc489e48dc253160e2678b1f
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>